Boolean creating, usages and checking updates